--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <!-- ^says language is english -->
   
   <head>
+    <link rel = "stylesheet" type="text/css" href="style.css">
     <title>This is a title</title>
   </head>
   <body>
